# math_lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  math_lib.10x
src/: quaternions.cpp  quaternions.hpp  quaternions_test.cpp  rotations.cpp  rotations.hpp  rotations_test.cpp
